# axum-production

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  NOTE.md  index.html
.cargo/: config.toml
examples/: _hmac.rs  gen_keys.rs  quick_dev.rs
public/: index.html
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  mw_response_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs  task_rpc.rs
tests/: quick_dev.rs
