[package]
name = "axum-fundamentals"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7", features = ["macros"] }
lazy-regex = "3.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
