[package]
name = "axum-fundamentals"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"

[dependencies]
axum = "0.7"
lazy-regex = "3.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
strum_macros = "0.26.4"
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
