[package]
name = "axum-fundamentals"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
serial_test = "3.1.1"

[dependencies]
axum = "0.7"
base64-url = "3.0.0"
hmac = "0.12.1"
lazy-regex = "3.1.0"
modql = { version = "0.3.10", features = ["with-sea-query"] }
rand = "0.8.5"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-uuid"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
strum_macros = "0.26.4"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
